	PR c++/34488 	* decl.c (grokdeclarator): Reject friend sfk_constructor 	FUNCTION_TYPE.

* g++.dg/parse/friend7.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131025 138bc75d-0d04-0410-961f-82ee72b054a4